# wt2p_ghe_switch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: GHEControlVersion.cmake
packaging/linux/: GHEControl.desktop
packaging/windows/: GHEControl.iss
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/config/: AppConfig.cpp  AppConfig.h  ServerConfig.h
src/core/: AntennaModel.cpp  AntennaModel.h  GheClient.cpp  GheClient.h  GheParser.cpp  GheParser.h  SwitchController.cpp  SwitchController.h
src/ui/: AntennaButton.cpp  AntennaButton.h  SetupDialog.cpp  SetupDialog.h
